--- a/packages/components/src/components/radio-button-group/radio-button-group.css
+++ b/packages/components/src/components/radio-button-group/radio-button-group.css
@@ -33,7 +33,7 @@
   --margin-left-title: var(--telekom-spacing-unit-x05);
 
   /*slotted items*/
-  --margin-top-slotted-item: var(--telekom-spacing-unit-x2);
+  --margin-top-slotted-item: var(--telekom-spacing-unit-x3);
 
   margin-top: var(--margin-top-slotted-item);
 }
